--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -22,6 +22,7 @@
     position: relative;
     background-color: #101010;
     width: 100vw;
+    max-width: 1920px;
     height: 754px;
     margin: auto;
     overflow-x: hidden;
@@ -285,7 +286,7 @@ a:hover, a:active {
 
 
 /*MOBILE RESPONSIVENESS*/
-@media only screen and (max-width: 1130px) and (min-width: 393px) {
+@media only screen and (max-width: 1130px) and (min-width: 323px) {
 
 
     .footer,
