--- a/src/pages/Articles/ExploringOfferwall.module.css
+++ b/src/pages/Articles/ExploringOfferwall.module.css
@@ -48,13 +48,15 @@ h2 {
 /*FIRST SECTION*/
 
 .firstExploringContainer {
+  background: url(/public/heroBackground.svg) no-repeat;
+  background-size: cover;
   width: 100vw;
   position: relative;
   overflow: visible;
   margin: auto;
   display: flex;
   justify-content: center;
-  height: 1060px;
+  height: 1160px;
   background-color: var(--White, #fff);
 }
 
@@ -72,6 +74,7 @@ h2 {
   height: 1060px;
   flex-direction: column;
   align-items: flex-start;
+  margin-top: 120px;
 }
 
 .mainFirst {
@@ -247,9 +250,10 @@ h2 {
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  height: 894px;
+  height: 3500px;
+  padding-bottom: 100px;
 }
 
 
@@ -257,74 +261,44 @@ h2 {
   display: none;
 }
 
-.thirdNonprofitContainerBox {
-  height: 894px;
-  width: 1512px;
-  display: flex;
-  flex-direction: row;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.thirdSectionLeft {
-  display: flex;
-  justify-content: flex-start;
-  width: 60%;
-  height: 725px;
-}
-
-.imageThirdNonprofitContainer {
-
+.thirdTextBox {
+  width: 800px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-
 }
 
-
-.thirdSectionRight {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-}
-
-.innerThirdSectionRight {
-  width: 520px;
-  height: 356px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-
-.thirdSectionRightH1 {
+.thirdTextTitle {
   color: #1E1E1E;
   font-feature-settings: 'clig'off, 'liga'off;
   font-family: gotham-medium;
-  font-size: 53px;
+  font-size: 24px;
   font-style: normal;
   font-weight: 500;
-  line-height: 120%;
-
+  line-height: 30px;
+  text-align: left;
 }
 
-
-.thirdSectionRightP {
-  width: 524px;
-  height: 180px;
-  display: flex;
-  margin-top: -20px;
+.thirdTextP {
   color: #1E1E1E;
   font-feature-settings: 'clig'off, 'liga'off;
   font-family: gotham-book;
   font-size: 16px;
+  font-style: normal;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 170%;
+  text-align: left;
 }
 
+.thirdImageBox {
+  width: 800px;
+  display: flex;
+  height: 629px;
+}
+
+.thirdImage {
+  width: 738px;
+  height: 629px;
+}
 
 
 
@@ -332,107 +306,305 @@ h2 {
 
 .fourthExploringContainer {
   width: 100%;
+  height: 1441px;
   display: flex;
+  justify-content: space-around;
+  background-color: #F0F0F0;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  height: 1034px;
 }
-
 
 .mobileFourthExploringContainer {
   display: none;
 }
 
-.fourthNonprofitContainerBox {
-  height: 1034px;
-  background: #1E1E1E;
+
+.fourthExploringBox1 {
+  height: 100px;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-
-}
-
-
-.fourthSectionLeft {
-  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--Primary-Black-1, #1E1E1E);
+  text-align: center;
+  font-family: gotham-medium, sans-serif;
+  font-size: 53px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 50px;
+  text-align: center;
+  position: relative;
+
 }
 
-.innerFourthSectionLeft {
-  height: 650px;
-  width: 548px;
+
+.fourthExploringBox2 {
+  height: 1043px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+}
+
+.innerFourthExploringBox2 {
+  width: 1100px;
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
-.innerFourthFreeResources {
-  height: 192px;
-  color: #fff;
-  font-feature-settings: 'clig'off, 'liga'off;
-  font-family: gotham-medium;
-  font-size: 53px;
-  font-weight: 500;
-  line-height: 120%;
+.fourthBox2Container {
+  display: flex;
+  justify-content: right;
+  width: 528px;
+  height: 1043px;
+  flex-direction: column;
+  background-color: #FFF;
+  align-items: center;
 }
 
 
-.innerFourthText {
-  width: 548px;
-  height: 255px;
+.fourth2TopContainer {
+  display: flex;
+  width: 528px;
+  height: 529px;
+}
+
+.fourth2BottomContainer {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-
+  justify-content: space-evenly;
+  width: 468px;
+  height: 514px;
 }
 
-.spanText {
-  color: #fff;
-  font-family: gotham-book;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 30px;
-}
-
-
-
-.fourthSectionRight {
-  width: 755px;
-  height: 1034px;
-  display: flex;
-  justify-content: flex-start;
-
-}
-
-.fourthSectionRight>img {
-  width: 755px;
-  height: 1034px;
-  flex-shrink: 0;
-}
-
-
-.fourthNonprofitImage {
+.fourthTitleContainer {
+  height: 144px;
   width: 100%;
-  height: 700px;
   display: flex;
-  justify-content: flex-end;
-  margin: auto;
-  margin-left: 150px;
-  margin-top: 100px;
+  align-items: flex-start;
+  justify-content: center;
+  color: var(--Primary-Black-1, #1E1E1E);
+  font-family: gotham-medium, sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+  text-align: left;
 }
 
-.buttonText2 {
+.fourthTextContainer {
+  height: 96px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--Primary-Black-1, #1E1E1E);
+  font-family: gotham-book, sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 170%;
+  text-align: left;
+
+}
+
+.timeAndDateGroup2 {
+  display: flex;
+  width: 218px;
+  justify-content: space-between;
+}
+
+.fourthButton {
+  display: flex;
+  height: 60px;
+}
+
+.buttonText {
   width: 210px;
   height: 60px;
-  border: 1px solid #FFF;
+  border: 1px solid #A18129;
+
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 5;
+  margin-bottom: 30px;
+}
+
+.buttonText1 {
+  border: 1px solid #A18129;
+  width: 220px;
+  height: 60px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #A18129;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: gotham-medium, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 38px;
+  z-index: 5;
+  cursor: pointer;
+}
+
+
+/*FIFTH SECTION*/
+
+.fifthExploringContainer {
+  background-color: #F0F0F0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.fifthExploringBackground {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  z-index: 5;
+}
+
+.mobileFifthExploringContainer {
+  display: none;
+}
+
+.innerFifthExploringContainer1 {
+  width: 1365px;
+  height: 495px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-image: url(/public/newsletterBg.svg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  align-items: center;
+
+}
+
+.innerContentFifthContainer {
+  display: flex;
+  width: 572px;
+  height: 367px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.stayU2D {
+  display: flex;
+  height: 65px;
+  font: 500 38px'gotham-medium', normal;
+  line-height: 170%;
+  color: #A18129;
+
+}
+
+.join {
+  display: flex;
+  height: 38px;
+  font: 500 54px'gotham-medium', normal;
+  line-height: 38px;
+  color: #FFFFFF;
+}
+
+
+.subscribe {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.form {
+  display: flex;
+  position: relative;
+  width: 556px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
+.subscribeBox {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  box-sizing: border-box;
+  width: 325px;
+  height: 60px;
+
+}
+
+::placeholder {
+  font: 400 14px'gotham-book', normal;
+  color: #BABCCE;
+  line-height: 24px;
+
+}
+
+.inputE {
+  padding: 0px 15px;
+  width: 325px;
+  height: 60px;
+  border: 0.9375px solid #FFFFFF;
+  font: 400 14px'gotham-book', normal;
+  background-color: #10101000;
+  line-height: 24px;
+  color: #BABCCE;
+}
+
+.alertMessage {
+  color: #BABCCE;
+  font: 400 16px'gotham-book', normal;
+  margin: 15px 0px;
+}
+
+.submit {
+  display: flex;
+  position: relative;
+  width: 210px;
+  height: 60px;
+
+}
+
+.submitButton {
+  position: relative;
+  width: 210px;
+  height: 60px;
+  background: #FFFFFF;
+  color: #1E1E1E;
+  font: 500 16px 'gotham-medium', normal;
+  line-height: 15px;
+  text-transform: uppercase;
+  border: 0.9375px solid #FFFFFF;
+}
+
+.unsubscribe {
+  display: flex;
+  height: 24px;
+  color: #BBBBBB;
+  font: 400 15px'inter-regular', normal;
+
+}
+
+.bottomBG {
+  margin-top: -160px;
+  z-index: -5;
+
 }
 
 /*MOBILE RESPONSIVENESS*/
@@ -818,102 +990,322 @@ h2 {
 
   /* FOURTH MOBILE SECTION */
 
-  .fourthNonprofitContainer {
+  .mobileFourthExploringContainer {
+    width: 100%;
+    max-width: 1920px;
+    height: 1580px;
+    display: flex;
+    justify-content: center;
+    background-color: #F0F0F0
+  }
+
+  .fourthExploringContainer {
     display: none;
   }
 
-  .mobileFourthNonprofitContainer {
+
+
+  .fourthExploringBox1 {
+    height: 100px;
     width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    height: 1048px;
-    background: #1E1E1E;
-  }
-
-  .mobileFourthNonprofitContainerBox {
-    height: 1048px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items: center;
-    justify-content: flex-start
-  }
-
-
-
-  .mobileFourthSectionLeft {
-    width: 100%;
-    display: flex;
     justify-content: center;
-
-  }
-
-  .imageMobileFourthNonprofitContainer {
-    width: 100%;
-    height: 471px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-  }
-
-  .mobileFourthNonprofitImage {
-    width: 100%;
-    height: 471px;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-  }
-
-  .mobileFourthNonprofitImage img {
-    width: 393px;
-    height: 471px;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-  }
-
-
-  .mobileFourthSectionRight {
-    width: 393px;
-    height: 577px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-  }
-
-  .mobileFourthSectionRightH1 {
-    color: #FFF;
-    width: 350px;
-    font-feature-settings: 'clig'off, 'liga'off;
-    font-family: gotham-medium;
-    font-size: 24px;
+    color: var(--Primary-Black-1, #1E1E1E);
+    text-align: center;
+    font-family: gotham-medium, sans-serif;
+    font-size: 53px;
     font-style: normal;
     font-weight: 500;
-    line-height: 36px;
+    line-height: 50px;
+    text-align: center;
+    position: relative;
+
   }
 
-  .bottomFourthMobile {
-    font-feature-settings: 'clig'off, 'liga'off;
+
+  .fourthExploringBox2 {
+    height: 1043px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+  }
+
+  .innerFourthExploringBox2 {
+    width: 1100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .fourthBox2Container {
+    display: flex;
+    justify-content: right;
+    width: 528px;
+    height: 1043px;
+    flex-direction: column;
+    background-color: #FFF;
+    align-items: center;
+  }
+
+
+  .fourth2TopContainer {
+    display: flex;
+    width: 528px;
+    height: 529px;
+  }
+
+  .fourth2BottomContainer {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    width: 350px;
-    color: var(--White, #FFF);
-    font-family: gotham-light;
-    font-size: 14px;
+    justify-content: space-evenly;
+    width: 468px;
+    height: 514px;
+  }
+
+  .fourthTitleContainer {
+    height: 144px;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    color: var(--Primary-Black-1, #1E1E1E);
+    font-family: gotham-medium, sans-serif;
+    font-size: 30px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
+    font-weight: 500;
+    line-height: 120%;
     text-align: left;
   }
 
-  .buttonFourthDiv {
+  .fourthTextContainer {
+    height: 96px;
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--Primary-Black-1, #1E1E1E);
+    font-family: gotham-book, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 170%;
+    text-align: left;
+
+  }
+
+  .timeAndDateGroup2 {
+    display: flex;
+    width: 218px;
+    justify-content: space-between;
+  }
+
+  .fourthButton {
+    display: flex;
+    height: 60px;
+  }
+
+  .buttonText {
+    width: 210px;
+    height: 60px;
+    border: 1px solid #A18129;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 5;
+    margin-bottom: 30px;
+  }
+
+  .buttonText1 {
+    border: 1px solid #A18129;
+    width: 220px;
+    height: 60px;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #A18129;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: gotham-medium, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 38px;
+    z-index: 5;
+    cursor: pointer;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+  /* FIFTH MOBILE SECTION */
+
+  .fifthExploringContainer {
+    display: none;
+  }
+
+  .mobileFifthExploringContainer {
+    background-color: #000000;
+    display: flex;
+    width: 100%;
+    height: 853px;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
+  .fifthExploringBackground {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0;
+    z-index: 5;
+  }
+
+
+  .innerFifthExploringContainer1 {
+    width: 1365px;
+    height: 495px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-image: url(/public/newsletterBg.svg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    align-items: center;
+
+  }
+
+  .innerContentFifthContainer {
+    display: flex;
+    width: 572px;
+    height: 367px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .stayU2D {
+    display: flex;
+    height: 65px;
+    font: 500 38px'gotham-medium', normal;
+    line-height: 170%;
+    color: #A18129;
+
+  }
+
+  .join {
+    display: flex;
+    height: 38px;
+    font: 500 54px'gotham-medium', normal;
+    line-height: 38px;
+    color: #FFFFFF;
+  }
+
+
+  .subscribe {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .form {
+    display: flex;
+    position: relative;
+    width: 556px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+
+
+  .subscribeBox {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    box-sizing: border-box;
+    width: 325px;
+    height: 60px;
+
+  }
+
+  ::placeholder {
+    font: 400 14px'gotham-book', normal;
+    color: #BABCCE;
+    line-height: 24px;
+
+  }
+
+  .inputE {
+    padding: 0px 15px;
+    width: 325px;
+    height: 60px;
+    border: 0.9375px solid #FFFFFF;
+    font: 400 14px'gotham-book', normal;
+    background-color: #10101000;
+    line-height: 24px;
+    color: #BABCCE;
+  }
+
+  .alertMessage {
+    color: #BABCCE;
+    font: 400 16px'gotham-book', normal;
+    margin: 15px 0px;
+  }
+
+  .submit {
+    display: flex;
+    position: relative;
+    width: 210px;
+    height: 60px;
+
+  }
+
+  .submitButton {
+    position: relative;
+    width: 210px;
+    height: 60px;
+    background: #FFFFFF;
+    color: #1E1E1E;
+    font: 500 16px 'gotham-medium', normal;
+    line-height: 15px;
+    text-transform: uppercase;
+    border: 0.9375px solid #FFFFFF;
+  }
+
+  .unsubscribe {
+    display: flex;
+    height: 24px;
+    color: #BBBBBB;
+    font: 400 15px'inter-regular', normal;
+
+  }
+
+  .bottomBG {
+    margin-top: -160px;
+    z-index: -5;
+
   }
 }
